# qdl_klayout_extension

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  version_control_log.md
.github/workflows/: pages.yml
docs/source/: conf.py  index.rst  introduction.md  requirements.txt
qdl_klayout_extension/: __init__.py  constants.py  errors.py  transformations.py  utils.py  visualize.py
qdl_klayout_extension/core/: __init__.py  coordinates.py  geometries.py  layout.py  patterns.py  shapes.py
qdl_klayout_extension/examples/: __init__.py  example_1_rectangle.gds  example_1_simple_rectangle.ipynb  example_2_cross.gds  example_2_cross_grid.gds  example_2_simple_cross_grid.ipynb  example_3_base_strip.gds  example_3_electrodes.ipynb  example_3_strip_grid.gds  example_4_concentric_shapes.gds  example_4_concentric_shapes.ipynb
