[metadata]
name = qdl_klayout_extension
version = 0.1.3.0
author = Vasilis Niaouris
author_email = vasilisniaouris@gmail.com
description = The quantum defect laboratory (QDL) KLayout extension provides additional functionalities complementary to the KLayout Python API
long_description = file: README.md, CHANGELOG.md, LICENSE
url = https://github.com/vasilisniaouris/qdl_klayout_extension
keywords = fabrication, microfabrication, nanofabrication, design
license = GNU GPL v3 license
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Jupyter
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    klayout>=0.28.6
    matplotlib>=3.7.1
    multipledispatch>=0.6.0
    numpy>=1.24.2
    pint>=0.20.1

[options.extras_require]
examples =
    notebook

[options.package_data]
* =
    *.ipynb

;package_dir=
;    qdl_klayout_extension = qdl_klayout_extension

;[options.package_data]
;qdl_klayout_extension = examples/*.ipynb